--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             Инструмент расписаний дежурств
         </title>
         
-        <h3>Инструмент расписание дежурств</h3>
+        <h3>Инструмент расписаний дежурств</h3>
         <h1>Регистрация</h1>
         <script src="index.js" defer>
             
@@ -66,3 +66,4 @@
     </body>
 
 </html>
+
